# torch-svm

./: CMakeLists.txt  LICENSE  README.md  data.c  data.lua  init.c  init.lua  svmasgd.lua  svmsgd.lua  svmtest.lua  util.c
dok/: index.dok  liblinear.dok  libsvm.dok  sgd.dok
liblinear/: CMakeLists.txt  COPYRIGHT  README.md  init.c  init.lua  liblinear_predict.c  liblinear_train.c  linear_model_torch.c  linear_model_torch.h
libsvm/: CMakeLists.txt  COPYRIGHT  init.c  init.lua  libsvm_load_model.c  libsvm_predict.c  libsvm_save_model.c  libsvm_train.c  svm_model_torch.c  svm_model_torch.h
sgd/: CMakeLists.txt  README.md  data.lua  init.lua  loss.lua  svmloss.lua  svmsgd.lua  test.lua
