SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)


FIND_PACKAGE(Torch REQUIRED)

ADD_SUBDIRECTORY(sgd)
ADD_SUBDIRECTORY(liblinear)
ADD_SUBDIRECTORY(libsvm)

SET(utilsrc init.c data.c util.c)
ADD_LIBRARY(svmutil MODULE ${utilsrc})
TARGET_LINK_LIBRARIES(svmutil luaT TH)

IF(LUALIB)
  TARGET_LINK_LIBRARIES(svmutil ${LUALIB})
ELSE(LUALIB)
  FIND_LIBRARY(LUAJIT_LIBRARIES luajit ${LUA_LIBDIR})
  IF (NOT ${LUAJIT_LIBRARIES} MATCHES "LUAJIT_LIBRARIES-NOTFOUND")
     MESSAGE("Found LuaJIT, linking with: " ${LUAJIT_LIBRARIES})
     TARGET_LINK_LIBRARIES(svmutil luajit)
  ELSE(${LUAJIT_LIBRARIES})
     MESSAGE("Did not find LuaJIT, attempting to link with vanilla Lua")
     TARGET_LINK_LIBRARIES(svmutil lua)
  ENDIF(${LUAJIT_LIBRARIES})
ENDIF(LUALIB)

INSTALL(TARGETS svmutil LIBRARY DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR})

SET(src)
SET(luasrc init.lua data.lua)

ADD_TORCH_PACKAGE(svm "${src}" "${luasrc}")
